# src/routes/auth-login.ts
@@ -11,80 +11,3 @@ router.get('/logout', limiter, logout)
 
 export default router
 
-/**
- * @swagger
- * tags:
- *   name: Auth
- *   description: Authentication routes
- */
-
-/**
- * @swagger
- * /auth/login:
- *   post:
- *     summary: Login user
- *     tags: [Auth]
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             required:
- *               - email
- *               - password
- *             properties:
- *               email:
- *                 type: string
- *               password:
- *                 type: string
- *     responses:
- *       200:
- *         description: Successful login
- *       400:
- *         description: Invalid credentials
- */
-
-/**
- * @swagger
- * /auth/register:
- *   post:
- *     summary: Register user
- *     tags: [Auth]
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             required:
- *               - full_name
- *               - username
- *               - email
- *               - password
- *             properties:
- *               full_name:
- *                 type: string
- *               username:
- *                 type: string
- *               email:
- *                 type: string
- *               password:
- *                 type: string
- *     responses:
- *       201:
- *         description: User registered
- *       400:
- *         description: Registration failed
- */
-
-/**
- * @swagger
- * /logout:
- *   get:
- *     summary: Logout user
- *     tags: [Auth]
- *     responses:
- *       200:
- *         description: Successful logout
- */
